k8s/pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: custom-app-pod
  labels:
    app: custom-app
spec:
  containers:
    - name: custom-app
      image: custom-app:latest
      imagePullPolicy: Never
      ports:
        - containerPort: 5000
      volumeMounts:
        - name: logs-volume
          mountPath: /app/logs
  volumes:
    - name: logs-volume
      emptyDir: {}
