k8s/istio-destinationrule.yaml
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: custom-app-dr
  labels:
    app: custom-app
spec:
  host: custom-app-service
  trafficPolicy:
    loadBalancer:
      simple: LEAST_CONN

    connectionPool:
      tcp:
        maxConnections: 3
      http:
        http1MaxPendingRequests: 5
        http2MaxRequests: 3

    tls:
      mode: ISTIO_MUTUAL
